--- a/PEG_B.html
+++ b/PEG_B.html
@@ -70,7 +70,7 @@
     <div class="container">
         <div class="userInfo">
             <div class="title">
-                <a href="사진 로드해서 링크 넣기">이승우</a>
+                <a href="승우사진.jpg">이승우</a>
             </div>
             <div class="average">
                 <div class="average_box">
