--- a/PEG_A.html
+++ b/PEG_A.html
@@ -1,38 +1,35 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <section class="logo">
-        <h1>PEG</h1>
-        <form action="">
-            <div class="nickname">
-                <input type="text" name="id" id="id" autocapitalize="off" required>
-                <label for="id">NICKNAME</label>
-            </div>
-            <div class="btn_inquiry">
-                <button id="btn" type="submit">ANALYSIS</button>
-            </div>
-        </form>
-    </section>
+    <head>
+        <meta charset="utf-8">
+        <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <section class="logo">
+            <h1>PEG</h1>
+            <form action="">
+                <div class="nickname">
+                    <input type="text" name="id" id="id" autocapitalize="off" required>
+                    <label for="id">NICKNAME</label>
+                </div>
+                <div class="btn_inquiry">
+                    <button id="btn" type="submit">ANALYSIS</button>
+                </div>
+            </form>
+        </section>
 
-    <script>
-        let id = $('#id');
-        let btn = $('#btn');
-
-        $(btn).on('click', function() {
-            if($(id).val() == "") {
-                $(id).next('label').addClass('warning');
-                setTimeout(function(){
-                    $('label').removeClass('warning');
-                },1500);
-            }
-        });
-        
-    </script>
-
-</body>
-
+        <script>
+            let id = $('#id');
+            let btn = $('#btn');
+            $(btn).on('click', function() {
+                if($(id).val() == "") {
+                    $(id).next('label').addClass('warning');
+                    setTimeout(function(){
+                        $('label').removeClass('warning');
+                    },1500);
+                }
+            });
+        </script>
+    </body>
 </html>
