gaimedi_logo_page

--- a/GameDi.html
+++ b/GameDi.html
@@ -3,17 +3,22 @@
     <head>
         <title>GameDi</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="GameDi_st0.css">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <link rel="stylesheet" href="./GameDi_st0.css">
+        <script src="./GameDi.js"></script>
     </head>
     <body>
         <div id="cover">
             <div class="GameDi-logo">GameDi</div>
             <div class="GameDi-button-start">
-                <a class="GameDi-button-image" href="#next-page">
-                    <img src="play.jpg" width="180" alt="playbutton">
-                    <img src="playbk.jpg" width="180" alt="playbuttonbk">
-                </a>
+                <div class="GameDi-button-image">
+                    <div class="a" onclick="startClick()">
+                        <img src="play.jpg" width="180" alt="playbutton">
+                    </div>
+                    <div class="b" style="display: none;">
+                        <img src="playdk.jpg" width="180" alt="playbuttondk">
+                    </div>
+                </div>
             </div>
         </div>
     </body>
