--- a/GameDi.html
+++ b/GameDi.html
@@ -9,7 +9,12 @@
     </head>
     <body>
         <div id="cover">
-            <div class="GameDi-logo">GameDi</div>
+            <div class="GameDi-logo">
+                <a class="logo" href="GameDi.html">
+                    <img src="logo.png" width="35" alt="GameDI_logo">
+                    <h1>GameDi</h1>
+                </a>
+            </div>
             <div class="GameDi-button-start">
                 <div class="GameDi-button-image">
                     <div class="a" onclick="startClick()">
